--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,32 @@
-//
+@import url('https://fonts.googleapis.com/css?family=Arimo:400,700&display=swap');
+
+*, html, body {
+  font-family: "Arimo", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: inherit;
+  font-size: 18px;
+}
+
+//Typography
+
+.h1 {
+
+}
+
+.h2 {
+
+}
+
+.h3 {
+
+}
+
+p.emp {
+
+}
+
+p {
+
+}
+
+//Responsive
